syntax = "proto3";
package corepb;

message TransactionHashTarget {
  string tx_type = 1;
  bytes from = 2;
  bytes to = 3;
  bytes value = 4;
  int64 timestamp = 5;
  uint64 nonce = 6;
  uint32 chain_id = 7;

  oneof payload {
    DefaultPayload default_payload = 20;
    AddCertificationPayload add_certification_payload = 21;
    AddRecordPayload add_record_payload = 22;
    RevokeCertificationPayload revoke_certification_payload = 23;
    VotePayload vote_payload = 24;
  }
}

message DefaultPayload {
  string message = 1;
}

message VotePayload {
  repeated bytes candidates = 1;
}

message AddCertificationPayload {
  int64 issue_time = 1;
  int64 expiration_time = 2;
  bytes hash = 3;
}

message RevokeCertificationPayload {
  bytes hash = 1;
}

message AddRecordPayload {
  bytes hash = 1;
}
